--- a/LMK/211215_06.md
+++ b/LMK/211215_06.md
@@ -118,7 +118,7 @@ world.';
 // SyntaxError: Invalid or unexpected token
 ```
 
-따라서 일반 문자열 내에서 줄바꿈 등의 `공백(white space)`을 표현하려면 백슬래시(\)로 시작하는 `이스케이프 시퀀스`를 사용해야 한다.
+따라서 일반 문자열 내에서 줄바꿈 등의 `공백(white space)`을 표현하려면 백슬래시(\\)로 시작하는 `이스케이프 시퀀스`를 사용해야 한다.
 
 |이스케이프 시퀀스|의미|
 |--|--|
