--- a/LMK/211215_06.md
+++ b/LMK/211215_06.md
@@ -54,9 +54,9 @@ console.log(3 / 2);     // 1.5
 ```
 
 숫자 타입은 추가적으로 세 가지 특별한 값도 표현할 수 있다.
-  - Infinity: 양의 무한대
-  - -Infinity: 음의 무한대
-  - Infinity: 산술 연산 불가(not-a-number)
+  - `Infinity`: 양의 무한대
+  - `-Infinity`: 음의 무한대
+  - `NaN`: 산술 연산 불가(not-a-number)
 
 ```javascript
 // 숫자 타입의 세 가지 특별한 값
