--- a/LMK/study/211227_12.md
+++ b/LMK/study/211227_12.md
@@ -338,7 +338,7 @@ add(2, 5, 10);
 
 `arguments` 객체는 함수를 정의할 때 매개변수 개수를 확정할 수 없는 `가변 인자 함수`를 구현할 때 유용하게 사용된다.
 
-### 10.05.02_인수 확인
+### 12.05.02_인수 확인
 
 ```javascript
 function add(x, y) {
@@ -413,7 +413,7 @@ console.log(add()); // 0
 
 **함수의 `매개변수`는 코드를 이해하는 데 방해되는 요소이므로 이상적인 `매개변수` 개수는 0개이며 적을수록 좋다. 매개변수의 개수가 많다는 것은 함수가 여러 가지 일을 한다는 증거이므로 바람직하지 않다. 이상적인 함수는 한 가지 일만 해야 하며 가급적 작게 만들어야 한다.**
 
-**따라서 `매개변수`는 최대 3개 이상을 넘지 안흔 것을 권장한다. 만약 그 이상의 매개변수가 필요하다면 하나의 매개변수를 선언하고 객체를 인수로 전달하는 것이 유리하다.**
+**따라서 `매개변수`는 최대 3개 이상을 넘지 않는 것을 권장한다. 만약 그 이상의 매개변수가 필요하다면 하나의 매개변수를 선언하고 객체를 인수로 전달하는 것이 유리하다.**
 
 다음은 `jQuery`의 `ajax 메서드`에 객체를 인수로 전달하는 예다.
 
